# youtube-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/youtube_mcp/: api.py  models.py  sarvam.py  server.py  transcript.py  whisper.py
tests/: test_api.py  test_sarvam.py  test_transcript.py  test_whisper.py
