[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "youtube-mcp"
version = "0.1.0"
description = "MCP server for YouTube — fetch video metadata and transcripts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "google-api-python-client>=2.0.0",
    "youtube-transcript-api>=0.6.0,<2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/youtube_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
